# pyOutlook

./: .coveragerc  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .travis.yaml  CONTRIBUTING.md  DEVELOPMENT.md  DISTRIBUTION.md  README.md  __init__.py  create_message.py  dev_requirements.txt  folders.py  internal_methods.py  landscape.yaml  main.py  message.py  message_actions.py  pyproject.toml  requirements.dev.txt  requirements.txt  retrieve.py  setup.py  static-analysis.datadog.yml  test.py  test_pyOutlook.py  travis.yaml
.cursor/rules/: use-type-hint.mdc
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: unit_tests.yml
docs/: Makefile  conf.py  index.rst  make.bat  pyOutlook.rst  requirements.txt
docs/_build_html/: .buildinfo  index.html  search.html  searchindex.js
docs/html/: genindex.html  modules.html  objects.inv  pyOutlook.html  readmeLink.html  readme_link.html  search.html  searchindex.js
docs/source/: conf.py  index.rst  installation.rst  pyOutlook.rst  quickstart.rst
internal/: createMessage.py  retrieve.py
pyOutlook/: README.md  README.rst  __init__.py  folders.py  main.py  message.py  requirements.txt  setup.py
pyOutlook.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyOutlook/core/: __init__.py  attachment.py  contact.py  folder.py  folders.py  main.py  message.py
pyOutlook/internal/: createMessage.py  errors.py  retrieve.py  (+3 more)
scripts/: manual_integration_test.py
tests/: account_tests.py  attachment_tests.py  emails.py  folder_tests.py  message_tests.py  test_account.py  utils.py  utils_tests.py
utils/: test_services.py
(+80 files in other folders)
