[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyOutlook"
version = "5.0.0"
description = "A Python module for connecting to the Outlook REST API, without the hassle of dealing with the JSON formatting for requests/responses and the REST endpoints and their varying requirements"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jens Astrup", email = "jensaiden@gmail.com"}
]
keywords = ["outlook", "office365", "microsoft", "email"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Email :: Email Clients (MUA)",
    "Topic :: Office/Business",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English"
]
dependencies = [
    "requests",
    "python-dateutil"
]

[project.optional-dependencies]
dev = [
    "coverage",
    "pytest",
    "pytest-cov"
]

[project.urls]
Homepage = "https://pypi.python.org/pypi/pyOutlook"
Documentation = "http://pyoutlook.readthedocs.io/en/latest/"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyOutlook*"]

[tool.pyrefly]
search_path = ["src/pyOutlook"]